<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".InputActivity"
    android:layout_marginBottom="200dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="30sp"
        android:text="@string/add_new_result"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:gravity="center"
                android:background="@drawable/rect"
                android:text="@string/student_number"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:gravity="center"
                android:background="@drawable/rect"
                android:text="@string/course_code"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:layout_weight="2"
                android:background="@drawable/rect"
                android:text="@string/result_date"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:background="@drawable/rect"
                android:gravity="center"
                android:text="@string/grade"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/StudentNrInput"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:inputType="number"
                android:hint="@string/student_number"/>
            <Spinner
                android:id="@+id/CourseCodeInput"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:inputType="textCapCharacters"
                android:maxLength="3"
                android:hint="@string/course_code"/>
            <EditText
                android:id="@+id/ResultDateInput"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:inputType="date"
                android:hint="@string/result_date"/>
            <EditText
                android:id="@+id/GradeInput"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:inputType="numberDecimal"
                android:hint="@string/grade"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_grade"/>
    <TextView
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textAppearance="?android:textAppearanceMedium"/>

</LinearLayout>